added some favicon and updated index.html file

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <!-- linked css -->
     <link rel="stylesheet" href="Assets/style.css">
 
+    <!-- Ico -->
+    <link rel="shortcut icon" href="Assets/Ico/favicon2.ico" type="image/x-icon">
+
 </head>
 
-<body>
-    <!--data-bs-spy="scroll" data-bs-target=".navbar"-->
+<body data-bs-spy="scroll" data-bs-target=".navbar">
+    <!---->
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
@@ -107,7 +110,9 @@
                             <h5 class="mt-4 mb-3">UX </h4>
                                 <p>I develop high-performing and delightful experiences tailored and conversion-focused
                                 </p>
-                                <a href="#" class="link-custom ">Read more</a>
+                                <a href="https://en.wikipedia.org/wiki/User_experience" class="link-custom "
+                                    target="_blank">Read
+                                    more</a>
                         </div>
                     </div>
 
@@ -119,7 +124,8 @@
                             <h5 class="mt-4 mb-2">Web Development</h4>
                                 <p>I develop high-performing and delightful experiences tailored and conversion-focused
                                 </p>
-                                <a href="#" class="link-custom">Read more</a>
+                                <a href="https://en.wikipedia.org/wiki/Web_development" class="link-custom"
+                                    target="_blank">Read more</a>
                         </div>
                     </div>
 
@@ -131,7 +137,7 @@
                             <h5 class="mt-4 mb-2">Python Developer</h4>
                                 <p>I develop high-performing and delightful experiences tailored and conversion-focused
                                 </p>
-                                <a href="#" class="link-custom">Read more</a>
+                                <a href="https://www.python.org/dev/" class="link-custom" target="_blank">Read more</a>
                         </div>
                     </div>
 
