--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <h1 class="display-4 fw-bold" data-aos="fade-up" data-aos-duration="600">
-                            I'M A <span class="text-brand">FULL STACK DEVELOPER</span> FROM MAHARASHTA, INDIA
+                            I'M A <span class="text-brand">SOFTWARE DEVELOPER</span> FROM MAHARASHTA, INDIA
                         </h1>
-                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="400">I am Pradip Sable, And
-                            Idevelop a high-performing and delightful
+                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="400">I am Pradip Subhash Sable, And
+                            I develop a high-performing and delightful
                             exeperiences trailored and
                             conversion-focoused</p>
                         <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
