--- a/index.html
+++ b/index.html
@@ -95,15 +95,18 @@
 
                 <div class="row pb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="col-lg-8">
-                        <h6 class="text-brand">SERVICES</h6>
-                        <h1>Services That I Provide</h1>
+                        <h6 class="text-
+                        brand">SERVICES</h6>
+                        <h1>Services Th
+                            at I Provide</h1>
                     </div>
                 </div>
 
                 <div class="row gy-4">
 
                     <div class="col-md-4" data-aos="fade-up" data-aos-duration="700">
-                        <div class="service p-4 bg-base rounded-4 shadow-effect">
+                        <div class="servic
+                        e p-4 bg-base rounded-4 shadow-effect">
                             <div class="iconbox rounded-4">
                                 <i class="las la-feather"></i>
                             </div>
