--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#about">About</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#reviews">Reviews</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#contect">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- //Navigation Bar -->
+   
 
     <!-- CONTENT WRAPPER -->
     <div id="content-wrapper">
@@ -87,16 +87,16 @@
             </div>
 
         </section>
-        <!-- //HOME -->
+       
 
-        <!-- SERVICES -->
+        <!-- stack that i know -->
         <section id="services" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="col-lg-8">
                         <h6 class="text-
-                        brand">SERVICES</h6>
+                        brand">Stack I serve</h6>
                         <h1>Services Th
                             at I Provide</h1>
                     </div>
@@ -148,7 +148,7 @@
 
             </div>
         </section>
-        <!-- //SERVICES -->
+        
 
         <!-- WORK -->
         <section id="work" class="full-height px-lg-5">
@@ -306,7 +306,7 @@
         <!-- //ABOUT -->
 
         <!-- REVIEWS -->
-        <section id="reviews" class="full-height px-lg-5">
+        <!-- <section id="reviews" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up" data-aos-duration="600">
@@ -378,7 +378,7 @@
 
 
             </div>
-        </section>
+        </section> -->
         <!-- //REVIEWS -->
 
     </div>
