changed most of the part

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </nav>
-   
+
 
     <!-- CONTENT WRAPPER -->
     <div id="content-wrapper">
@@ -87,7 +87,7 @@
             </div>
 
         </section>
-       
+
 
         <!-- stack that i know -->
         <section id="services" class="full-height px-lg-5">
@@ -148,7 +148,7 @@
 
             </div>
         </section>
-        
+
 
         <!-- WORK -->
         <section id="work" class="full-height px-lg-5">
@@ -165,12 +165,14 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./Assets/images/project-1.jpg" alt="">
+                                <img class="rounded-4 h-48 w-96 object-cover"
+                                    src="./Assets/images/Screenshot 2023-07-30 at 13.34.56.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
-                                <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the
-                                    elements you could ever need to put together</p>
+                                <h4>OpenAI Landing Page</h4>
+                                <p>Yet bed any for travelling assistance indulgence unpleasing.
+                                    Not thoughts all exercise blessing. Indulgence way everything joy alteration
+                                    boisterous the attachment. Party we years to order allow asked of.</p>
                                 <a href="#" class="link-custom">Read more</a>
                             </div>
                         </div>
@@ -179,44 +181,25 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./Assets/images/project-2.png" alt="">
+                                <img class="rounded-4" src="./Assets/images/Screenshot 2023-07-30 at 13.56.23.png"
+                                    alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
-                                <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the
-                                    elements you could ever need to put together</p>
+                                <h4>Bambu cart </h4>
+                                <p>100% natural, toxic-free, vegan
+                                    Odorless, tasteless, washable, reusable, durable
+                                    Eco-friendly and sustainable
+                                    100% Cruelty-free
+                                    Hand-made by Local Artisans
+                                    Biodegradable Bamboo products.</p>
                                 <a href="#" class="link-custom">Read more</a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6" data-aos="fade-rup" data-aos-duration="600">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./Assets/images/project-3.png" alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
-                                <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the
-                                    elements you could ever need to put together</p>
-                                <a href="#" class="link-custom">Read more</a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./Assets/images/project-4.png" alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
-                                <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the
-                                    elements you could ever need to put together</p>
-                                <a href="#" class="link-custom">Read more</a>
-                            </div>
-                        </div>
-                    </div>
+
+
 
                 </div>
 
